[tool.poetry]
name = "pytu"
version = "0.1.1"
description = ""
authors = ["Michal Mikolas <nanuqcz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", 'pyautogui', 'helium', 'pytesseract', 'pyperclip']
build-backend = "poetry.core.masonry.api"
